# firecracker-tools

./: .gitmodules  README.md  clean_up.sh  extract_time.sh  network_tap_setup.sh  profile.py  shell.nix  start_many.sh  start_vm.sh
experiments/: .gitignore  Makefile  plot_sched_latency.py  plot_success_rate.py  plot_throughput.py  run.py
experiments/multiapp/: function_config.yaml  workload.yaml
experiments/multiapp-large/: workload.yaml
experiments/oneapp/: function_config.yaml
experiments/oneapp-large/: workload.yaml
experiments/test/: workload.yaml
firerunner/: .gitignore  Cargo.toml  README.md  small_cluster_experiment.sh
firerunner/bins/: main.rs
firerunner/bins/controller/: .controller.rs.swp  .main.rs.swp  README.md  cluster.rs  config.rs  controller.rs  example_func_configs.yaml  example_requests.json  example_workload.json  listener.rs  main.rs  metrics.rs  request.rs  test_eviction_requests.json
firerunner/bins/firerunner/: .main.rs.swp  README.md  main.rs
firerunner/src/: fs.rs  lib.rs  main.rs  pipe_pair.rs  runner.rs  vmm_wrapper.rs  vsock.rs
images/: mk_rtimage.sh  postscript.sh  prelude.sh
images/common/: .gitignore  Makefile  outl.c
images/fc_wrappers/: fc_wrapper.js  fc_wrapper.py
images/runtimes/: nodejs.sh  (+2 more)
kvm-bindings/: Cargo.toml
measurements/: README.md  add_entropy.c  clean_up.sh  create_microbenchmark_rootfs.sh  create_rootfs.sh  create_workload_rootfs.sh  demo-workload  extract_time.sh  kill_all_fc.sh  latency_test.sh  mem-usage.ipynb  memory_usage.sh  rng  same_app_multi_run.sh  start_many.sh  start_vm.sh  sys_setup.sh  ts.c  workload.sh  workload_latency_analysis.ipynb
workloads/: alternating_workload.json  example_workload.yaml  generator.py  heavy.json  heavy.yaml  light.yaml  plot.py  process_data.py
(+29 files in other folders)
