[package]
name = "firerunner"
version = "0.1.0"
authors = ["Amit Aryeh Levy <amit@amitlevy.com>"]

[[bin]]
name = "firerunner"
path = "bins/firerunner/main.rs"

[[bin]]
name = "controller"
path = "bins/controller/main.rs"

[lib]


[dependencies]
clap = "*"
cgroups = "*"
futures = "=0.1.18"
vmm = { path = "../firecracker/vmm", features = ["vsock"] }
sys_util = { path = "../firecracker/sys_util" }
nix = "0.14.*"
libc = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
num_cpus = "1.0"
[workspace]
