[package]
name = "firerunner"
version = "0.1.0"
authors = ["Amit Aryeh Levy <amit@amitlevy.com>"]

[[bin]]
name = "firerunner"
path = "bins/firerunner/main.rs"

[[bin]]
name = "controller"
path = "bins/controller/main.rs"

[lib]


[dependencies]
clap = "*"
cgroups = "*"
futures = "=0.1.18"
vmm = { path = "../firecracker/vmm", features = ["vsock"] }
sys_util = { path = "../firecracker/sys_util" }
net_util = { path = "../firecracker/net_util" }
fc_util = { path = "../firecracker/fc_util" }
memory_model = { path = "../firecracker/memory_model" }
nix = "0.14.*"
libc = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
num_cpus = "1.0"
time = "0.1"
libmath = "0.2.1"
[workspace]
